[package]
name = "sitronix-touch"
version = "0.0.1"
edition = "2021"
authors = ["Andelf <andelf@gmail.com>"]
repository = "https://github.com/embedded-driver/sitronix-touch"
documentation = "https://docs.rs/sitronix-touch"
homepage = "https://github.com/embedded-driver/sitronix-touch"
categories = ["hardware-interfaces", "no-std", "embedded-hal"]
description = "embedded-hal driver for Sitronix touch screen controllers: ST1615/ST1624/ST1633/ST1633i/ST1727/ST1912"
keywords = ["embedded", "embedded-hal", "touch", "touchscreen"]
readme = "README.md"
license = "MIT/Apache-2.0"

[dependencies]
defmt = { version = "0.3.4", optional = true }
embedded-hal-02 = { package = "embedded-hal", version = "0.2", features = [
    "unproven",
] }
embedded-hal-1 = { package = "embedded-hal", version = "1.0.0-alpha.10" }
